@@ -1308,18 +1308,19 @@ void RenderBlock::layoutInlineChildren(bool relayoutChildren)
                     sFirstBidiRun = sCompactFirstBidiRun;
                     sBidiRunCount += sCompactBidiRunCount;
                 }
-                
-                InlineFlowBox* lineBox = constructLine(start, end);
-                if (!lineBox)
-                    return;
 
-                // Now we position all of our text runs horizontally.
-                computeHorizontalPositionsForLine(lineBox, context);
-
-                // Now position our text runs vertically.
-                computeVerticalPositionsForLine(lineBox);
-
-                deleteBidiRuns(renderArena());
+                if (sBidiRunCount) {
+                    InlineFlowBox* lineBox = constructLine(start, end);
+                    if (lineBox) {
+                        // Now we position all of our text runs horizontally.
+                        computeHorizontalPositionsForLine(lineBox, context);
+        
+                        // Now position our text runs vertically.
+                        computeVerticalPositionsForLine(lineBox);
+        
+                        deleteBidiRuns(renderArena());
+                    }
+                }
                 
                 if( end == start || (end.obj && end.obj->isBR() && !start.obj->isBR() ) ) {
                     adjustEmbeddding = true;
