@@ -1,3 +1,12 @@
+2003-03-10  David Hyatt  <hyatt@apple.com>
+
+	Fix for <pre> regression, bug #3193590, directory listings
+	busted.
+	
+        Reviewed by gramps
+
+        * khtml/rendering/bidi.cpp:
+
 2003-03-10  Darin Adler  <darin@apple.com>
 
         Reviewed by Maciej.
